--- a/lesson/section5/netflix-app/src/components/Nav.css
+++ b/lesson/section5/netflix-app/src/components/Nav.css
@@ -1,5 +1,5 @@
 .nav {
-  position: cixed;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 30px;
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   transition-timing-function: ease-in;
+  /* 트랜지션 효과: 모든 프로퍼티의 변화를 0.5초에 걸쳐 전환한다. */
   transition: all 0.5s;
 }
 
