--- a/lesson/section5/netflix-app/src/components/Banner.css
+++ b/lesson/section5/netflix-app/src/components/Banner.css
@@ -57,7 +57,7 @@
   height: 80px;
 }
 .banner--fadeBottom {
-  height: 7.4rem;
+  height: 100%;
   background-image: linear-gradient(
     180deg,
     transparent,
